<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_equation"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_weight="0"
        android:background="#056cf2"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="equation" />

    <TextView
        android:id="@+id/text_display"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:background="#056cf2"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_equation"
        tools:text="ans" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:onClick="buttonClick"
            android:textSize="@dimen/button_textSize"
            android:textStyle="bold"
            app:iconGravity="textStart"
            app:icon="@drawable/ic_outline_backspace_24"
            app:layout_constraintEnd_toStartOf="@+id/button_percent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_Clear"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_percent"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:onClick="buttonClick"
            android:text="@string/percent"
            android:textSize="@dimen/button_textSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/button_plus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_clear"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_Clear"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:onClick="buttonClick"
            android:text="@string/clear"
            android:textSize="@dimen/button_textSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/button_clear"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:onClick="buttonClick"
            android:text="@string/plus"
            android:textSize="@dimen/button_textSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_percent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_seven"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:onClick="buttonClick"
            android:text="@string/seven"
            android:textColor="#404040"
            android:textSize="@dimen/button_textSize"
            app:layout_constraintEnd_toStartOf="@+id/button_eight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_Clear" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_eight"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:onClick="buttonClick"
            android:text="@string/eight"
            android:textColor="#404040"
            android:textSize="@dimen/button_textSize"
            app:layout_constraintEnd_toStartOf="@+id/button_nine"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_seven"
            app:layout_constraintTop_toBottomOf="@+id/button_clear" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_nine"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:onClick="buttonClick"
            android:text="@string/nine"
            android:textColor="#404040"
            android:textSize="@dimen/button_textSize"
            app:layout_constraintEnd_toStartOf="@+id/button_minus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_eight"
            app:layout_constraintTop_toBottomOf="@+id/button_percent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:onClick="buttonClick"
            android:text="@string/minus"
            android:textSize="@dimen/button_textSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_nine"
            app:layout_constraintTop_toBottomOf="@+id/button_plus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_four"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:onClick="buttonClick"
            android:text="@string/four"
            android:textColor="#404040"
            android:textSize="@dimen/button_textSize"
            app:layout_constraintEnd_toStartOf="@+id/button_five"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_seven" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_five"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:onClick="buttonClick"
            android:text="@string/five"
            android:textColor="#404040"
            android:textSize="@dimen/button_textSize"
            app:layout_constraintEnd_toStartOf="@+id/button_six"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_four"
            app:layout_constraintTop_toBottomOf="@+id/button_eight" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_six"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:onClick="buttonClick"
            android:text="@string/six"
            android:textColor="#404040"
            android:textSize="@dimen/button_textSize"
            app:layout_constraintEnd_toStartOf="@+id/button_mul"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_five"
            app:layout_constraintTop_toBottomOf="@+id/button_nine" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_mul"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:onClick="buttonClick"
            android:text="@string/multiplication"
            android:textSize="@dimen/button_textSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_six"
            app:layout_constraintTop_toBottomOf="@+id/button_minus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_three"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:onClick="buttonClick"
            android:text="@string/three"
            android:textColor="#404040"
            android:textSize="@dimen/button_textSize"
            app:layout_constraintEnd_toStartOf="@+id/button_div"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_two"
            app:layout_constraintTop_toBottomOf="@+id/button_six" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_div"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:onClick="buttonClick"
            android:text="@string/divide"
            android:textSize="@dimen/button_textSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_three"
            app:layout_constraintTop_toBottomOf="@+id/button_mul" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_one"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:onClick="buttonClick"
            android:text="@string/one"
            android:textColor="#404040"
            android:textSize="@dimen/button_textSize"
            app:layout_constraintEnd_toStartOf="@+id/button_two"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_four" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_two"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:onClick="buttonClick"
            android:text="@string/two"
            android:textColor="#404040"
            android:textSize="@dimen/button_textSize"
            app:layout_constraintEnd_toStartOf="@+id/button_three"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_one"
            app:layout_constraintTop_toBottomOf="@+id/button_five" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_zero"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:onClick="buttonClick"
            android:text="@string/zero"
            android:textColor="#404040"
            android:textSize="@dimen/button_textSize"
            app:layout_constraintEnd_toStartOf="@+id/button_dot"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_one" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_dot"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:onClick="buttonClick"
            android:text="@string/dot"
            android:textSize="@dimen/button_textSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/button_equal"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_zero"
            app:layout_constraintTop_toBottomOf="@+id/button_two" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_equal"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:onClick="buttonClick"
            android:text="@string/equal"
            android:textSize="@dimen/button_textSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_dot"
            app:layout_constraintTop_toBottomOf="@+id/button_div" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>